[パスワードない]sign_up

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -72,7 +72,7 @@
 
     </div>
     <div class="col-7">
-    <%= f.text_field :address, class: "address" %>
+    <%= f.text_field :address, :size=>"72", class: "address" %>
     </div>
   </div>
 
