--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <h1>新規会員登録</h1>
-  <%= form_for(resource, as: resource_name, url: customer_registration_path(resource_name)) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="row g-3 align-items-center">
