--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-        <% if user_signed_in? %>
+        <% if customer_signed_in? %>
           <li>
             <%= link_to public_customers_path,class: 'nav-link text-light' do %>
               マイページ
@@ -25,6 +25,32 @@
           </li>
           <li>
             <%= link_to destroy_customer_session_path, method: :delete, class: 'nav-link text-light' do %>
+              ログアウト
+            <% end %>
+          </li>
+        <% elsif admin_signed_in? %>
+          <li>
+            <%= link_to admin_items_path,class: 'nav-link text-light' do %>
+              商品一覧
+            <% end %>
+          </li>
+          <li>
+            <%=  link_to admin_customers_path,class: 'nav-link text-light' do %>
+              会員一覧
+            <% end %>
+          </li>
+          <li>
+            <%=  link_to admin_orders_path ,class: 'nav-link text-light' do %>
+              注文履歴一覧
+            <% end %>
+          </li>
+          <li>
+            <%= link_to admin_genres_path, class: 'nav-link text-light' do %>
+              ジャンル一覧
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-light' do %>
               ログアウト
             <% end %>
           </li>
