--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body>
     <%= render 'layouts/header' %>
-      <%= yield %>
+      <main>
+        <%= yield %>
+      </main>
     <%= render 'layouts/footer' %>
   </body>
 </html>
