--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,69 +9,69 @@
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
           <li>
-            <%= link_to public_customers_path,class: 'nav-link text-light' do %>
+            <%= link_to public_customers_path,class: "nav-link text-light" do %>
               マイページ
             <% end %>
           </li>
           <li>
-            <%=  link_to public_items_path,class: 'nav-link text-light' do %>
+            <%=  link_to public_items_path,class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
           <li>
-            <%=  link_to public_cart_items_path ,class: 'nav-link text-light' do %>
+            <%=  link_to public_cart_items_path ,class: "nav-link text-light" do %>
               カート
             <% end %>
           </li>
           <li>
-            <%= link_to destroy_customer_session_path, method: :delete, class: 'nav-link text-light' do %>
+            <%= link_to destroy_customer_session_path, method: :delete, class: "nav-link text-light" do %>
               ログアウト
             <% end %>
           </li>
         <% elsif admin_signed_in? %>
           <li>
-            <%= link_to admin_items_path,class: 'nav-link text-light' do %>
+            <%= link_to admin_items_path,class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
           <li>
-            <%=  link_to admin_customers_path,class: 'nav-link text-light' do %>
+            <%=  link_to admin_customers_path,class: "nav-link text-light" do %>
               会員一覧
             <% end %>
           </li>
           <li>
-            <%=  link_to admin_orders_path ,class: 'nav-link text-light' do %>
+            <%=  link_to admin_orders_path ,class: "nav-link text-light" do %>
               注文履歴一覧
             <% end %>
           </li>
           <li>
-            <%= link_to admin_genres_path, class: 'nav-link text-light' do %>
+            <%= link_to admin_genres_path, class: "nav-link text-light" do %>
               ジャンル一覧
             <% end %>
           </li>
           <li>
-            <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-light' do %>
+            <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-light" do %>
               ログアウト
             <% end %>
           </li>
         <% else %>
           <li>
-            <%= link_to public_about_path,class: 'nav-link text-light' do %>
+            <%= link_to public_about_path,class: "nav-link text-light" do %>
               About
             <% end %>
           </li>
           <li>
-            <%= link_to public_items_path,class: 'nav-link text-light' do %>
+            <%= link_to public_items_path,class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
           <li>
-            <%= link_to new_customer_registration_path,class: 'nav-link text-light' do %>
+            <%= link_to new_customer_registration_path,class: "nav-link text-light" do %>
               新規登録
             <% end %>
           </li>
           <li>
-            <%= link_to new_customer_session_path ,class: 'nav-link text-light' do %>
+            <%= link_to new_customer_session_path ,class: "nav-link text-light" do %>
               ログイン
             <% end %>
           </li>
