--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
-  <div class='container mt-5'>
-  	<div class='row'>
-    	<div class='mx-auto'>
+  <div class="container mt-5">
+    <div class="row">
+    	<div class="mx-auto">
     	</div>
     </div>
   </div>
