[Add]admin/log_in + [fix]routes

--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Admin::Orders#index</h1>
 <p>Find me in app/views/admin/orders/index.html.erb</p>
+
+
+これヘッダーが実装されたら消す
+<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
