[Add]public-customer-show

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to admin_orders_path ,class: "nav-link text-light" do %>
+            <%= link_to admin_path ,class: "nav-link text-light" do %>
               注文履歴一覧
             <% end %>
           </li>
