[Add]fix-header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,17 +9,17 @@
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
           <li>
-            <%= link_to public_customers_path,class: "nav-link text-light" do %>
+            <%= link_to public_mypage_path, class: "nav-link text-light" do %>
               マイページ
             <% end %>
           </li>
           <li>
-            <%= link_to public_items_path,class: "nav-link text-light" do %>
+            <%= link_to public_items_path, class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
           <li>
-            <%= link_to public_cart_items_path ,class: "nav-link text-light" do %>
+            <%= link_to public_cart_items_path, class: "nav-link text-light" do %>
               カート
             <% end %>
           </li>
@@ -30,17 +30,17 @@
           </li>
         <% elsif admin_signed_in? %>
           <li>
-            <%= link_to admin_items_path,class: "nav-link text-light" do %>
+            <%= link_to admin_items_path, class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
           <li>
-            <%= link_to admin_customers_path,class: "nav-link text-light" do %>
+            <%= link_to admin_customers_path, class: "nav-link text-light" do %>
               会員一覧
             <% end %>
           </li>
           <li>
-            <%= link_to admin_orders_path ,class: "nav-link text-light" do %>
+            <%= link_to admin_path, class: "nav-link text-light" do %>
               注文履歴一覧
             <% end %>
           </li>
@@ -56,22 +56,22 @@
           </li>
         <% else %>
           <li>
-            <%= link_to public_about_path,class: "nav-link text-light" do %>
+            <%= link_to public_about_path, class: "nav-link text-light" do %>
               About
             <% end %>
           </li>
           <li>
-            <%= link_to public_items_path,class: "nav-link text-light" do %>
+            <%= link_to public_items_path, class: "nav-link text-light" do %>
               商品一覧
             <% end %>
           </li>
           <li>
-            <%= link_to new_customer_registration_path,class: "nav-link text-light" do %>
+            <%= link_to new_customer_registration_path, class: "nav-link text-light" do %>
               新規登録
             <% end %>
           </li>
           <li>
-            <%= link_to new_customer_session_path ,class: "nav-link text-light" do %>
+            <%= link_to new_customer_session_path, class: "nav-link text-light" do %>
               ログイン
             <% end %>
           </li>
