--- a/app/views/public/registrations/edit.html.erb
+++ b/app/views/public/registrations/edit.html.erb
@@ -1,8 +1,26 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit <%= resource_name.to_s.humanize %>会員情報編集</h2>
+
+<div class="cover-user-edit">
+  <div class="container">
+    <div class="row justify-content-center">
+      <h1 class="font-weight-normal mt-5 mb-5">プロフィール編集</h1>
+    </div>
+    <div class="row justify-content-center">
+      <%= form_with model: @customer, local:true do |f| %>
+      <div class="form-group">
+        <label class="form-label">名前</label>
+        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class: "form-control" %>
+      </div>
+      <%= f.submit '保存する', class: "btn btn-success" %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
+    <%= f.
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
