[show]admin_items_new

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -23,7 +23,7 @@
           <% @items.each do |item| %>
             <tr>
               <td><%= item.id %></td>
-              <td><%= link_to item.name,admin_item_path(:id) %></td>
+              <td><%= link_to item.name,admin_item_path(item.id) %></td>
               <td><%= item.non_tax_price %></td>
               <td><%= item.genre.name %></td>
               <td>
