--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,40 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class = "container">
+  <div class = "row">
+    <div class = "col">
+      <h3>商品詳細</h3>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <%= image_tag @item.item_image, size: "200x200" %>
+    </div>
+    <div class = "col">
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>商品説明</th>
+            <th>ジャンル</th>
+            <th>税込価格(税抜価格)</th>
+            <th>ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+            <td><%= @item.name %></td>
+            <td><%= @item.body %></td>
+            <td><%= @item.genre.name %></td>
+            <td><%= @item.non_tax_price %>(<%= @item.add_tax_price %>)</td>
+            <td>
+              <% if @item.is_selling == true %>
+                <p class = "text-success">販売中</p>
+              <% else %>
+                <p class = "text-black-50">販売中</p>
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
