--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -37,4 +37,9 @@
       </table>
     </div>
   </div>
+  <div class = "row">
+    <div class = "col">
+      <%= link_to "編集", edit_admin_item_path(@item.id) %>
+    </div>
+  </div>
 </div>
