[image_fix]admin_items_new

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -30,7 +30,7 @@
                 <% if item.is_selling == true %>
                   <p class = "text-success">販売中</p>
                 <% else %>
-                  <p class = "text-black-50">販売中</p>
+                  <p class = "text-black-50">販売停止中</p>
                 <% end %>
               </td>
             </tr>
