--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -6,7 +6,11 @@
   </div>
   <div class = "row">
     <div class = "col">
-      <%= image_tag @item.item_image, size: "200x200" %>
+      <% if @item.item_image.attached? %>
+        <%= image_tag @item.item_image, size: "200x200" %>
+       <% else %>
+        <%= image_tag 'no_image', size: "200x200" %>
+       <% end %>
     </div>
     <div class = "col">
       <table class='table table-hover table-inverse'>
@@ -29,7 +33,7 @@
               <% if @item.is_selling == true %>
                 <p class = "text-success">販売中</p>
               <% else %>
-                <p class = "text-black-50">販売中</p>
+                <p class = "text-black-50">販売停止中</p>
               <% end %>
             </td>
           </tr>
