--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,5 +1,5 @@
 <h2>ショッピングカート</h2>
-  <%= link_to "カートを空にする", public_cart_items_clear_path, class: "btn btn-danger", method: :delete %>
+  <%= link_to "カートを空にする", public_cart_items_clear_path, controller: "cart_items", action: "clear", class: "btn btn-danger", method: :delete %>
 <table class='table'>
     <thead>
       <tr>
@@ -11,10 +11,4 @@
       </tr>
     </thead>
     <%= render "public/cart_items/all_cart_items", cart_items: @cart_items %>
-  </table>
-
-  <%= link_to "買い物を続ける", public_root_path, class: "btn btn-primary" %>
-  <h5>合計金額</h5>
-  <%= "999999999" %>
-
-  <%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-success" %>
+<%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-success" %>
