[fix]public_items

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,3 +1,4 @@
+商品編集
 <%= render 'error', item: @item %>
 <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch , local:true do |f| %>
 <p>itemimage</p>
