--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,3 +1,4 @@
+商品新規登録
 <%= render 'error', item: @item %>
 <%= form_with model: @item,url: admin_items_path, local:true do |f| %>
 <p>itemimage</p>
