--- a/app/views/public/items/top.html.erb
+++ b/app/views/public/items/top.html.erb
@@ -24,7 +24,7 @@
         <%= image_tag 'no_image', size: "200x200" %>
       <% end %>
       <%= link_to item.name, public_item_path(item.id) %>
-      <%= item.non_tax_price %>
+      <%= with_tax_price(item.non_tax_price) %>
       <% if item.is_selling == true %>
         <p class = "text-success">販売中</p>
       <% else %>
