--- a/app/views/public/cart_items/_all_cart_items.html.erb
+++ b/app/views/public/cart_items/_all_cart_items.html.erb
@@ -1,24 +1,35 @@
-    <tbody id="all_cart_items">
-      <% cart_items.each do |cart_items| %>
-      <% item = Item.find(cart_items.item_id) %>
-        <tr>
-          <td><%= image_tag item.get_item_image(20,20) %></td>
-          <td><%= item.name %></td>
-          <td><%= with_tax_price(item.non_tax_price) %></td>
-          <td>
-            <%= form_with url: public_cart_item_path(cart_items), method: :patch do |f| %>
-            <!--ここのリファクタリングわからなすぎて死ねる、きたね〜〜〜〜〜〜〜〜〜〜〜〜〜。(1..20).to_aをハッシュにする？-->
-            <%= f.select :quantity, [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7],[8,8],[9,9],[10,10],[11,11],[12,12],[13,13],[14,14],[15,15],[16,16],[17,17],[18,18],[19,19],[20,20]], selected: "#{cart_items.quantity}" %>
-            <%= f.submit "変更", class: "btn btn-success"%>
-            <% end %>
-          </td>
-          <td><%= subtotal(cart_items.quantity) %></td>
-          <td><%= link_to "削除する", public_cart_item_path(cart_items), method: :delete, class: "btn btn-danger" %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
+<div id="all_cart_items">
+<table class='table'>
+  <thead>
+    <tr>
+      <th></th>
+      <th>商品名</th>
+      <th>単価(税込)</th>
+      <th>数量</th>
+      <th>小計</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% cart_items.each do |cart_item| %>
+    <% item = Item.find(cart_item.item_id) %>
+      <tr>
+        <td><%= image_tag item.get_item_image(20,20) %></td>
+        <td><%= item.name %></td>
+        <td><%= with_tax_price(item.non_tax_price) %></td>
+        <td>
+          <%= form_with url: public_cart_item_path(cart_item), method: :patch, local: false do |f| %>
+          <!--ここのリファクタリングわからなすぎて死ねる、きたね〜〜〜〜〜〜〜〜〜〜〜〜〜。(1..20).to_aをハッシュにする？-->
+          <%= f.select :quantity, [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7],[8,8],[9,9],[10,10],[11,11],[12,12],[13,13],[14,14],[15,15],[16,16],[17,17],[18,18],[19,19],[20,20]], selected: "#{cart_item.quantity}" %>
+          <%= f.submit "変更", class: "btn btn-success"%>
+          <% end %>
+        </td>
+        <td><%= subtotal(cart_item.quantity) %></td>
+        <td><%= link_to "削除する", public_cart_item_path(cart_item), method: :delete, class: "btn btn-danger", remote: true %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
   <%= link_to "買い物を続ける", public_root_path, class: "btn btn-primary" %>
   <h5>合計金額</h5>
-  <%= total_price(cart_items) %>
+  <%= total_price(@cart_items) %>
+</div>
