--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,14 +1,4 @@
 <h2>ショッピングカート</h2>
-  <%= link_to "カートを空にする", public_cart_items_clear_path, controller: "cart_items", action: "clear", remote: true, class: "btn btn-danger", method: :delete %>
-<table class='table'>
-    <thead>
-      <tr>
-        <th>(画像)</th>
-        <th>商品名</th>
-        <th>単価(税込)</th>
-        <th>数量</th>
-        <th>小計</th>
-      </tr>
-    </thead>
-    <%= render "public/cart_items/all_cart_items", cart_items: @cart_items %>
-<%= link_to "情報入力に進む", new_public_order_path, remote: true, class: "btn btn-success" %>
+  <%= link_to "カートを空にする", public_cart_items_clear_path, controller: "cart_items", action: "clear", class: "btn btn-danger", method: :delete, remote: true %>
+  <%= render "public/cart_items/all_cart_items", cart_items: @cart_items %>
+  <%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-success" %>
