[index]public_items

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-3">
+      <p>ジャンル検索</p>
+      <% @genres.each do |genres| %>
+      <p><%= genres.name %></p>
+      <% end %>
+    </div>
+    <div class = "col-9">
+      <h2>商品一覧</h2><h3>(全<%= Item.all.count %>件中<%= @items.count %>件)</h3>
+      <div class = "row">
+      <% @items.each do |item| %>
+        <div class = "col-3">
+        <% if item.item_image.attached? %>
+          <%= image_tag item.item_image, size: "200x200" %>
+        <% else %>
+          <%= image_tag 'no_image', size: "200x200" %>
+          </%>
+        <% end %>
+          <p><%= link_to item.name, public_item_path(item.id) %></p>
+          <p>￥<%= with_tax_price(item.non_tax_price) %></p>
+          <% if item.is_selling == true %>
+            <p class = "text-success">販売中</p>
+          <% else %>
+            <p class = "text-black-50">販売停止中</p>
+        <% end %>
+        </div>
+      <% end %>
+      </div>
+      <%= paginate @items %>
+    </div>
+  </div>
+</div>
