--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -26,12 +26,13 @@
             <p class = "text-black-50">販売停止中</p>
           <% end %>
           <!--カート追加用のフォーム　現状機能なし-->
-          <%= form_with url: public_cart_items_path, local:true do |f| %>
-            <%= hidden_field_tag :customer_id, current_customer.id %>
-            <%= hidden_field_tag :item_id, @item.id %>
+          <%= form_with model: @cart_item, url: public_cart_items_path, local:true do |f| %>
+            <%= f.hidden_field :customer_id, :value => current_customer.id %>
+            <%= f.hidden_field :item_id, :value => @item.id %>
             <%= f.select :quantity, *[1..10], include_blank: "個数選択"  %>
             <%= f.submit "カートに入れる", class: "btn btn-success"%>
           <% end %>
+
         </div>
       </div>
     </div>
