--- a/app/views/public/cart_items/_all_cart_items.html.erb
+++ b/app/views/public/cart_items/_all_cart_items.html.erb
@@ -1,20 +1,22 @@
 <div id="all_cart_items">
-<table class='table'>
+<table class="table table-bordered border-secondary" >
   <thead>
-    <tr>
-      <th></th>
+    <tr class="table-active">
       <th>商品名</th>
       <th>単価(税込)</th>
       <th>数量</th>
       <th>小計</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <% cart_items.each do |cart_item| %>
     <% item = Item.find(cart_item.item_id) %>
       <tr>
-        <td><%= image_tag item.get_item_image(20,20) %></td>
-        <td><%= item.name %></td>
+        <td>
+          <%= image_tag item.get_item_image(20,20) %>
+          <%= item.name %>
+        </td>
         <td><%= with_tax_price(item.non_tax_price) %></td>
         <td>
           <%= form_with url: public_cart_item_path(cart_item), method: :patch, local: false do |f| %>
