--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,4 +1,8 @@
+<div class="container">
 <h2>ショッピングカート</h2>
   <%= link_to "カートを空にする", public_cart_items_clear_path, controller: "cart_items", action: "clear", class: "btn btn-danger", method: :delete, remote: true %>
   <%= render "public/cart_items/all_cart_items", cart_items: @cart_items %>
+  <div class="d-flex align-items-center justify-content-center">
   <%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-success" %>
+  </div>
+</div>
