[Finish]public-customer-confirmation

--- a/app/views/public/customers/confirmation.html.erb
+++ b/app/views/public/customers/confirmation.html.erb
@@ -12,7 +12,7 @@
         <% end %>
       </td>
       <td>
-        <%= link_to public_mypage_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-danger" do %>
+        <%= link_to public_mypage_path, method: :patch, class: "btn btn-danger" do %>
           退会する
         <% end %>
       </td>
