[機能一通り]public_items

--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -7,6 +7,9 @@
       <% end %>
     </div>
     <div class = "col-9">
+      <% if @cart_item.errors.any? %>
+      <p class="text-danger">カート一覧から修正してください</p>
+      <% end %>
       <div class = "row">
         <div class = "col-4">
         <% if @item.item_image.attached? %>
@@ -22,17 +25,16 @@
           <h3>￥<%= with_tax_price(@item.non_tax_price) %><sapn class = "small">(税込み)</sapn></h3>
           <% if @item.is_selling == true %>
             <p class = "text-success">販売中</p>
+            
+            <%= form_with model: @cart_item, url: public_cart_items_path, local:true do |f| %>
+              <%= f.hidden_field :customer_id, :value => current_customer.id %>
+              <%= f.hidden_field :item_id, :value => @item.id %>
+              <%= f.select :quantity, *[1..10], include_blank: "個数選択"  %>
+              <%= f.submit "カートに入れる", class: "btn btn-success"%>
+            <% end %>
           <% else %>
             <p class = "text-black-50">販売停止中</p>
           <% end %>
-          <!--カート追加用のフォーム　現状機能なし-->
-          <%= form_with model: @cart_item, url: public_cart_items_path, local:true do |f| %>
-            <%= f.hidden_field :customer_id, :value => current_customer.id %>
-            <%= f.hidden_field :item_id, :value => @item.id %>
-            <%= f.select :quantity, *[1..10], include_blank: "個数選択"  %>
-            <%= f.submit "カートに入れる", class: "btn btn-success"%>
-          <% end %>
-
         </div>
       </div>
     </div>
