--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,28 +1,70 @@
-商品編集
-<%= render 'error', item: @item %>
-<%= form_with model: @item, url: admin_item_path(@item.id), method: :patch , local:true do |f| %>
-<p>itemimage</p>
-<%= f.file_field :item_image, accept: "image/*" %>
-
-<p>name</p>
-<%= f.text_field :name, class: 'form-control' %>
-<p>body</p>
-<%= f.text_area :body, class: 'form-control' %>
-<p>ジャンル</p>
-<%= f.collection_select :genre_id, @genre, :id, :name, include_blank: "選択して下さい" %>
-<p>税抜価格</p>
-<%= f.text_area :non_tax_price, class: 'form-control' %>
-
-<p>販売ステータス</p>
-<%= f.radio_button :is_selling, "true" %>
-<%= f.label :is_selling, "販売中" %>
-<%= f.radio_button :is_selling, "false" %>
-<%= f.label :is_selling, "販売停止中" %>
-
-
-<%= f.submit class: 'btn btn-success' %>
-
-
-
-
-<% end %>
+<div class = "container">
+  <div class = "row">
+    <div class = "col">
+      <h2>商品編集</h2>
+    </div>
+    <div class = "col">
+      <p><%= render 'error', item: @item %></p>
+    </div>
+  </div>
+  <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch , local:true do |f| %>
+  <div class = "row">
+    <div class = "col-2">
+      <p>商品画像</p>
+    </div>
+    <div class = "col-4">
+      <%= f.file_field :item_image, accept: "image/*" %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-2">
+      <p>商品名</p>
+    </div>
+    <div class = "col-4">
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-2">
+      <p>商品説明</p>
+    </div>
+    <div class = "col-4">
+      <%= f.text_area :body, class: 'form-control' %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-2">
+      <p>ジャンル</p>
+    </div>
+    <div class = "col-4">
+      <%= f.collection_select :genre_id, @genre, :id, :name, include_blank: "選択して下さい" %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-2">
+      税抜価格
+    </div>
+    <div class = "col-4">
+      <%= f.text_area :non_tax_price, class: 'form-control' %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-2">
+      <p>販売ステータス</p>
+    </div>
+    <div class = "col-4">
+      <%= f.radio_button :is_selling, "true" %>
+      <%= f.label :is_selling, "販売中" %>
+      <%= f.radio_button :is_selling, "false" %>
+      <%= f.label :is_selling, "販売停止中" %>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-2">
+    </div>
+    <div class = "col-4">
+      <%= f.submit class: 'btn btn-success' %>
+    </div>
+  </div>
+  <% end %>
+</div>
