--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<h1>注文情報入力画面</h1>
+支払い方法
+アドレス
+  ユーザー住所
+  追加住所
+  新規登録住所(保存なし？)
+
