--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,43 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<h3>配送先登録/一覧</h3>
+
+<%= form_with model: @address, url: public_addresses_path, method: :post, local:true do |f| %>
+ <div class="field">
+    <label>郵便番号</label>
+    <%= f.text_field :postal_code %>
+  </div>
+
+  <div class="field">
+    <label>住所</label>
+    <%= f.text_field :address %>
+  </div>
+
+  <div class="field">
+    <label>宛名</label>
+    <%= f.text_field :name %>
+  </div>
+  <%= f.hidden_field :customer_id, :value => current_customer.id %>
+  <div class="field">
+    <%= f.submit "新規登録", class: "btn btn-success" %>
+  </div>
+<% end %>
+
+<table class="table table-bordered">
+  <tbody>
+    <tr>
+      <td>郵便番号</td>
+      <td>住所</td>
+      <td>宛名</td>
+    </tr>
+    <tr>
+      <td><%= @customer.postal_code %></td>
+      <td><%= @customer.address %></td>
+      <td><%= @customer.family_name %><%= @customer.first_name %></td>
+    </tr>
+    <% @addresses.each do |address| %>
+    <tr>
+      <td></td>
+
+    </tr>
+    <% end %>
+  </tbody>
+</table>
