--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,6 +1,38 @@
-<h1>Admin::Orders#index</h1>
-<p>Find me in app/views/admin/orders/index.html.erb</p>
-
-
-これヘッダーが実装されたら消す
-<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+<div class = "container">
+  <div class = "row">
+    <div class = "col">
+      <h3>注文履歴一覧</h3>
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col">
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+            <tr>
+              <td><%= link_to order.create_at,admin_oder_path(order.id) %></td>
+              <td><%= order.name %></td>
+              <td><%= total_order_quantity(@order_items) %></td>
+              <td>
+                <% if item.is_selling == true %>
+                  <p class = "text-success">販売中</p>
+                <% else %>
+                  <p class = "text-black-50">販売停止中</p>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <%= paginate @items %>
+</div>
