[Finish]public-address-index

--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -35,8 +35,9 @@
     </tr>
     <% @addresses.each do |address| %>
     <tr>
-      <td></td>
-
+      <td><%= address.postal_code %></td>
+      <td><%= address.address %></td>
+      <td><%= address.name %></td>
     </tr>
     <% end %>
   </tbody>
