--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,6 @@
-<h1ユーザー注文履歴一覧</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<h1>ユーザー注文履歴一覧</h1>
+　　　　　　　　荒　巻　ス　カ　ル　チ　ノ　フ</br>
+　　　　　　　　　 _,,..,,,,_</br>
+　　　　　　　 　/ ,' 3　 `ヽｰっ</br>
+　　　　　　　　 l　　 ⊃　⌒_つ</br>
+　　　　　 　　　 `'ｰ---‐'''''"</br>
