--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,112 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class = "container">
+  <div class = "row">
+    <h3>注文履歴詳細</h3>
+    <div class = "col-12">
+      <div class = "row">
+        <div class = "col-2">
+          購入者
+        </div>
+        <div class = "col-8">
+          <%= @order.customer.family_name %><span> </span></%><%= @order.customer.first_name %>
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "col-2">
+          注文日
+        </div>
+        <div class = "col-8">
+          <%= @order.created_at.strftime('%Y/%m/%d') %>
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "col-2">
+          配送先
+        </div>
+        <div class = "col-8">
+          <%= @order.postal_code %><%= @order.address %><br>
+          <%= @order.name %>
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "col-2">
+          支払方法
+        </div>
+        <div class = "col-8">
+          <%= @order.payment_method_i18n %>
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "col-2">
+          注文ステータス
+        </div>
+        <div class = "col-8">
+          <%= form_with url: admin_order_path(@order), method: :patch , local:true do |f| %>
+            <%= f.select :trade_status, [['入金待ち', 0], ['入金確認', 1], ['製作中', 2], ['発送準備中', 3], ['発送済み', 4]], selected: "#{@order.trade_status_before_type_cast}"  %>
+            <%= f.submit class: 'btn btn-success' %>
+          <% end %>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class = "row">
+    <div class = "col-8">
+      <table class='table table-hover table-inverse'>
+  <thead>
+    <tr>
+      <th>商品名</th>
+      <th>単価(税込み)</th>
+      <th>数量</th>
+      <th>小計</th>
+      <th>製作ステータス</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @order.order_items.each do |order_item| %>
+      <tr>
+        <!--<td>< %= order_item.item.name %></td>-->
+        <!--<td>< %= (order_item.price*1.1).floor.to_s(:delimited) %></td>-->
+        <!--<td>< %= order_item.quantity %></td>-->
+        <!--<td>< %= (order_item.price*1.1*order_item.quantity).floor.to_s(:delimited) %></td>-->
+        <td><%= order_item.item.name %></td>
+        <td><%= with_tax_price(order_item.price) %></td>
+        <td><%= subtotal(order_item.quantity) %></td>
+        <td><%= (order_item.price*1.1*order_item.quantity).floor.to_s(:delimited) %></td>
+        <td><%= form_with url: admin_order_item_path(order_item.id), method: :patch , local:true do |f| %>
+          <%= f.select :making_status, [['着手不可', 0], ['製作待ち', 1], ['製作中', 2], ['製作完了', 3]], selected: "#{order_item.making_status_before_type_cast}" %>
+          <%= f.submit class: 'btn btn-success' %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+    </div>
+    <div class = "col-4">
+      <div class = "row">
+        <div class = "col-3">
+          商品合計
+        </div>
+        <div class = "col-3">
+          <%= @order.total_payment %>円
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "col-3">
+          送料
+        </div>
+        <div class = "col-3">
+          <%= @order.postage %>円
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "col-3">
+          請求金額合計
+        </div>
+        <div class = "col-3">
+          <%= @order.total_payment + @order.postage %>円
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
