[機能一通り]admin_order

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -64,14 +64,10 @@
   <tbody>
     <% @order.order_items.each do |order_item| %>
       <tr>
-        <!--<td>< %= order_item.item.name %></td>-->
-        <!--<td>< %= (order_item.price*1.1).floor.to_s(:delimited) %></td>-->
-        <!--<td>< %= order_item.quantity %></td>-->
-        <!--<td>< %= (order_item.price*1.1*order_item.quantity).floor.to_s(:delimited) %></td>-->
         <td><%= order_item.item.name %></td>
         <td><%= with_tax_price(order_item.price) %></td>
+        <td><%= order_item.quantity %></td>
         <td><%= subtotal(order_item.quantity) %></td>
-        <td><%= (order_item.price*1.1*order_item.quantity).floor.to_s(:delimited) %></td>
         <td><%= form_with url: admin_order_item_path(order_item.id), method: :patch , local:true do |f| %>
           <%= f.select :making_status, [['着手不可', 0], ['製作待ち', 1], ['製作中', 2], ['製作完了', 3]], selected: "#{order_item.making_status_before_type_cast}" %>
           <%= f.submit class: 'btn btn-success' %>
