[Finish]public-address-edit

--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,5 +1,5 @@
 <h3>配送先登録/一覧</h3>
-
+<%= flash[:notice] %>
 <%= form_with model: @address, url: public_addresses_path, method: :post, local:true do |f| %>
  <div class="field">
     <label>郵便番号</label>
