--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,45 +1,34 @@
 <h3>配送先編集</h3>
 
-<%= form_with model: @customer, url: public_customers_path, local:true do |f| %>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>氏名　</label>
-          <%= f.text_field :family_name, class: "form-control" %>
-          <%= f.text_field :first_name, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>フリガナ　</label>
-          <%= f.text_field :family_kana, class: "form-control" %>
-          <%= f.text_field :first_kana, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>郵便番号　</label>
-          <%= f.text_field :postal_code, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>住所　</label>
-          <%= f.text_field :address, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>電話番号　</label>
-          <%= f.text_field :phone_number, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-inline">
-          <label>メールアドレス　</label>
-          <%= f.text_field :email, class: "form-control" %>
-        </div>
-      </div>
-      <div class="form-group">
-          <%= f.submit "変更内容を保存", class: "btn btn-success" %>
-      </div>
-    <% end %>
+<% if @address.errors.any? %>
+  <%= @address.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @address.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+<% end %>
+
+<%= form_with model: @address, url: public_address_path, local:true do |f| %>
+  <div class="form-group">
+    <div class="form-inline">
+      <label>郵便番号</label>
+        <%= f.text_field :postal_code, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-inline">
+      <label>住所</label>
+        <%= f.text_field :address, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-inline">
+      <label>宛名</label>
+        <%= f.text_field :name, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.submit "変更内容を保存", class: "btn btn-success" %>
+  </div>
+<% end %>
