[Start]admin-customer-index

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<h3>会員一覧</h3>
+<% @customers.each do |customer| %>
+  <%= customer.family_name %>
